c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/extern_param.c
/* A function parameter cannot have a storage class */
int f(extern int i) {
    return i;
}

int main(void) {
    return f(1);
}